@@ -7,6 +7,9 @@ USE_ANAME
 CHECK_SIGPROCMASK
 CHECK_WAIT_TYPE
 DECLARE_SYS_ERRLIST
+AC_CHECK_SIZEOF(short)
+AC_CHECK_SIZEOF(int)
+AC_CHECK_SIZEOF(long)
 AC_FUNC_VFORK
 AC_HAVE_FUNCS(getcwd getdtablesize)
 AC_HEADER_STDARG
